--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.51.15",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
-    "next": "14.2.4",
+    "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "openai": "^4.53.0",
-    "react": "^18",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-d3-cloud": "^1.0.6",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
