--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.15",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
