--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.0",
     "cuid": "^3.0.0",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.30",
     "lucide-react": "^0.408.0",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
