Update_Credentials_Login

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 
 DATABASE_URL="mysql://tuantu:password@localhost:/testdb"
 NEXTAUTH_SECRET="asdkjopasdiopaipo"
+NEXTAUTH_URL="http:localhost:3000"
 GOOGLE_CLIENT_ID = '331002496197-born29tc7t8849h845erpgjmuq504fa2.apps.googleusercontent.com'          #Tuan Tu asen
 GOOGLE_CLIENT_SECRET = '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'
 OPENAI_API_KEY='sk-proj-F1NlbwNJ7blBkvSzoT8ET3BlbkFJMPGYhAYHztmU8k5JNUWY'
