--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.51.15",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.2",
     "bcrypt-ts": "^5.0.2",
     "bcryptjs": "^2.4.3",
