--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.30",
     "lucide-react": "^0.408.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
